2023.03.26 fixed up css alignment scaling

--- a/Project 1 nm.css
+++ b/Project 1 nm.css
@@ -9,43 +9,88 @@ body{
 #containerLetterOutput {
   
     display: grid;
-    grid-auto-rows: 45px;
+    grid-template-columns: (auto, clamp(32px, 8vw, 60px));
+    grid-auto-rows: clamp(32px, 6vw, 60px);
+    height: clamp(320px, 48vw, 500px);
     justify-self: center;
     align-self: center;
+    justify-content: center;
+    align-content: center;
     
 }
 
 .charInputBox {
-    width: 25px;
-    height: 25px;
+    
+    font-size: clamp(32px, 6vw, 60px);
+
     background-color: rgb(18, 18, 19);
     border: 2px solid rgb(58, 58, 60);
     color: white;
+
     font-weight: 900;
-    text-align: center;
-    padding: 10px;
-    margin: 5px;
+    
+    padding: 1px;
+    margin: 1px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
  /*   box-sizing: border-box; */
 }
 
-#keyboardContainerTopRow, #keyboardContainerMiddleRow, #keyboardContainerBottomRow {
-    display: flex;
-    height: 35px;
+#keyboardContainerTopRow, #keyboardContainerMiddleRow {
+
+
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 1px;
+    row-gap: 1px;
+  
+}
+
+#keyboardContainerBottomRow {
+
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr) 3fr;
+    grid-template-rows: 1fr;
+    column-gap: 1px;
+    row-gap: 1px;
 }
 
 .keyboardKeys {
-    height: 20px;
-    width: 20px;
+
+    font-size: clamp(32px, 8vw, 60px);
+    width: clamp(32px, 8vw, 60px);
+
     background-color: #818384;
     color: white;
-    margin: 3px;
-    padding: 4px;
+    margin: 1px;
     border-radius: 10%;
     text-align: center;
     font-weight: 900;
     transition-property: background-color;
-    
-  
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.enterKey {
+    font-size: clamp(28px, 7vw, 48px);
+    width: clamp(99px, 25vw, 180px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.deleteKey{
+    font-size: clamp(28px, 6vw, 48px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .keyboardKeys:hover {
@@ -55,7 +100,8 @@ body{
 #gameContainer {
     display: grid;
     grid-template-columns: 1fr;
-    grid-auto-rows: 400px 150px;
+    
+    grid-template-rows: 50% 30% auto;
     justify-items: center;
     justify-content: center;
    
